[gd_scene load_steps=16 format=3 uid="uid://bmxhw42pq6dp6"]

[ext_resource type="Script" path="res://src/title_screen.gd" id="1_h87cv"]
[ext_resource type="Texture2D" uid="uid://b1qusgeh4v5ah" path="res://assets/ScrollingBG.png" id="1_ls0le"]
[ext_resource type="Texture2D" uid="uid://dq03l741silyt" path="res://assets/TitleLogo.png" id="2_60koj"]
[ext_resource type="FontFile" uid="uid://c5hgn1rhtkqud" path="res://assets/Small_Pixel_Font.ttf" id="3_peulb"]
[ext_resource type="FontFile" uid="uid://bhl8yycwq0fvo" path="res://assets/Minecraftia-Regular.ttf" id="5_tdi75"]

[sub_resource type="Animation" id="Animation_yxtna"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kvup1"]
resource_name = "scroll"
length = 1.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6njoi"]
_data = {
"RESET": SubResource("Animation_yxtna"),
"scroll": SubResource("Animation_kvup1")
}

[sub_resource type="Animation" id="Animation_ormkd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uahnc"]
resource_name = "bob"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ggf5y"]
_data = {
"RESET": SubResource("Animation_ormkd"),
"bob": SubResource("Animation_uahnc")
}

[sub_resource type="Animation" id="Animation_8ojcm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m8mmg"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8dhvg"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rdkij"]
_data = {
"RESET": SubResource("Animation_8ojcm"),
"fade": SubResource("Animation_m8mmg"),
"fade_in": SubResource("Animation_8dhvg")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h87cv")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(480, 270)
texture = ExtResource("1_ls0le")
hframes = 19

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
libraries = {
"": SubResource("AnimationLibrary_6njoi")
}
autoplay = "scroll"

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(480, 220)
texture = ExtResource("2_60koj")
hframes = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
libraries = {
"": SubResource("AnimationLibrary_ggf5y")
}
autoplay = "bob"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.5
offset_top = 100.0
offset_right = 140.5
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_peulb")
theme_override_font_sizes/font_size = 24
text = "fight"

[node name="HowToPlay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = 156.0
offset_right = 65.5
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_peulb")
theme_override_font_sizes/font_size = 24
text = "how to play"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.5
offset_top = 211.0
offset_right = 140.5
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_peulb")
theme_override_font_sizes/font_size = 24
text = "quit"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rdkij")
}

[node name="Instructions" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ColorRect2" type="ColorRect" parent="Instructions"]
layout_mode = 2
color = Color(0.133333, 0.133333, 0.133333, 0.67451)

[node name="MarginContainer" type="MarginContainer" parent="Instructions/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="InstructionText" type="RichTextLabel" parent="Instructions/ColorRect2/MarginContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_tdi75")
bbcode_enabled = true
scroll_active = false

[node name="NextText" type="Button" parent="Instructions/ColorRect2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_peulb")
text = "next"

[node name="Close" type="Button" parent="Instructions/ColorRect2/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_peulb")
text = "close"

[node name="PreviousText" type="Button" parent="Instructions/ColorRect2/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_peulb")
text = "previous"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Instructions/ColorRect2/MarginContainer/NextText" to="." method="_on_next_text_pressed"]
[connection signal="pressed" from="Instructions/ColorRect2/MarginContainer/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Instructions/ColorRect2/MarginContainer/PreviousText" to="." method="_on_previous_text_pressed"]
